--- a/Novo projeto/templates/index.html
+++ b/Novo projeto/templates/index.html
@@ -71,7 +71,7 @@
         <section class="container mt-5" id='sobre'>
 
             <div class="row w-100">
-                <div class="col-md-12">
+                <div class="col-md-12" data-anime="down">
                     <h2 class='pt-3'>Sobre</h2>
                     <p>
                         Sou a Camila, estudante de ADS & Segurança da Informação com uma curiosidade pela área de T.I em geral. 
@@ -84,9 +84,9 @@
 
             <div class="row mt-4">
                 <div class="col-md-4">
-                    <img class="img-fluid shadow" src="../static/img/WhatsApp Image 2025-01-13 at 15.31.35.jpeg" alt="Foto de Perfil">
+                    <img class="img-fluid shadow" src="../static/img/WhatsApp Image 2025-01-13 at 15.31.35.jpeg" alt="Foto de Perfil" data-anime="left">
                 </div>
-                <div class="col md-8">
+                <div class="col md-8" data-anime="right">
                     <h3>Desenvolvedora Low-Code</h3>
                     <p>
                         Focada em Power Apps, sou responsável por projetar, desenvolver e otimizar aplicativos empresariais. 
@@ -152,54 +152,66 @@
                     <div class="col-md-6">
                         <p class='mt-3 mb-0'>HTML</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 45%">45%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 45%">45%</div>
                         </div>
                         <p class='mt-3 mb-0'>CSS</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="13" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 13%">13%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 13%">13%</div>
                         </div>
                         <p class='mt-3 mb-0'>JAVASCRIPT</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="18" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 18%">18%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 18%">18%</div>
                         </div>
                         <p class='mt-3 mb-0'>PYTHON</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="19" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 19%">19%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 19%">19%</div>
                         </div>
                         <p class='mt-3 mb-0'>JAVA</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 5%">5%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 5%">5%</div>
                         </div>
                         <p class='mt-3 mb-0'>C#</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 2%">2%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 2%">2%</div>
                         </div>
                     </div>
                 
                     <div class="col-md-6">
                         <p class='mt-3 mb-0'>LIDERANÇA</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 85%">85%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 85%">85%</div>
                         </div>
                         <p class='mt-3 mb-0'>MARLETING PESSOAL</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 45%">45%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 45%">45%</div>
                         </div>
                         <p class='mt-3 mb-0'>COMUNICAÇÃO ASSERTIVA</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 60%">60%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 60%">60%</div>
                         </div>
                         <p class='mt-3 mb-0'>ADAPTABILIDADE</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 90%">90%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 90%">90%</div>
                         </div>
                         <p class='mt-3 mb-0'>MENTALIDADE DE CRESCIMENTO</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 80%">80%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 80%">80%</div>
                         </div>
                         <p class='mt-3 mb-0'>TRABALHO EM EQUIPE</p>
                         <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                            <div class="progress-bar" style="width: 75%">75%</div>
+                            <div class="progress-bar" data-anime="left"
+                            style="width: 75%">75%</div>
                         </div>
                     </div>
 
@@ -217,19 +229,19 @@
                 <div id="row">
                     <div class="col-md-6">
                         <h3 class="cv-title">Educação</h3>
-                        <div class='cv-item'>
+                        <div class='cv-item' data-anime="up">
                             <h4>Tecnólogo em Análise e Desenvolvimento de Sistemas</h4>
                             <h5>Atualmente</h5>
                             <p><em>Universidade Estadual do Sul da Bahia</em></p>
                             <p>O curso de Análise e Desenvolvimento de Sistemas na Universidade Estadual do Sudoeste da Bahia (UESB) forma profissionais capacitados para projetar, desenvolver, implementar e gerenciar sistemas computacionais. Ele combina teoria e prática para preparar o aluno para atuar no mercado de tecnologia, desenvolvendo soluções inovadoras para diferentes áreas.</p>
                         </div>
-                        <div class='cv-item'>
+                        <div class='cv-item'data-anime="up">
                             <h4>Tecnólogo em Segurança da Informação</h4>
                             <h5>2024-Atualmente</h5>
                             <p><em>SENAC São Paulo</em></p>
                             <p>O Curso de Graduação Tecnologia em Segurança da Informação do Senac EAD ensina metodologias para proteger redes de computadores e sistemas computacionais conectados às redes nas organizações.</p>
                         </div>
-                        <div class='cv-item'>
+                        <div class='cv-item' data-anime="up">
                             <h4>Cursos Livres em Negócios & Marketing</h4>
                             <h5>2023-2024</h5>
                             <p><em>ALURA</em></p>
@@ -238,19 +250,19 @@
                     </div>
                     <div class="col-md-6">
                         <h3 class="cv-title">Profissional</h3>
-                        <div class='cv-item'>
+                        <div class='cv-item' data-anime="up">
                             <h4>Desenvolvedora Low-Code</Low-Code></h4>
                             <h5>Atualmente</h5>
                             <p><em>Sistema FIEP - Paraná</em></p>
                             <p>Focada em Power Apps, sou responsável por projetar, desenvolver e otimizar aplicativos empresariais. Atuo na automação de processos, integração de dados e personalização de soluções usando Microsoft Power Platform.</p>
                         </div>
-                        <div class='cv-item'>
+                        <div class='cv-item' data-anime="up">
                             <h4>Suporte Técnico</h4>
                             <h5>2023</h5>
                             <p><em>Giben do Brasil</em></p>
                             <p>Assessoria interna para utilização de software patenteado pela empresa. Suporte a equipe técnica disponibilizando material com especificações de cada cliente, realização de agendamento de viagens, compra de passagens, locação de transporte, reserva de hotéis e compra de equipamentos necessários. Desenvolvimento de treinamentos exclusivos focado para as necessidades de produção do cliente. Entrega de relatórios diários via TOTVS Protheus.</p>
                         </div>
-                        <div class='cv-item'>
+                        <div class='cv-item' data-anime="up">
                             <h4>Suporte Técnico</h4>
                             <h5>2022-2023</h5>
                             <p><em>PROJECT Serviços Especializados</em></p>
@@ -263,7 +275,7 @@
         </section>
 
         <section id="portfolio" class="section-bg mt-5">
-            <div class="container pb-5 pt-5">
+            <div class="container pb-5 pt-5" data-anime="left">
 
                 <h2 class="pb-4">Portfólio</h2>
                 
@@ -338,7 +350,7 @@
 
                 <div class="row">
                     <div class="col-md-5">
-                        <div class="card p-5 shadow border-0">
+                        <div class="card p-5 shadow border-0" data-anime="up">
                             <div class="endereco">
                                 <h4><i class="bi bi-geo-alt"></i>Localização:</h4>
                                 <p>Curitiba, Paraná</p>
@@ -354,7 +366,7 @@
                     </div>
 
                     <div class="col-md-7 mt-5 mt-md-0">
-                        <div class="card p-5 h-100 shadow border-0">
+                        <div class="card p-5 h-100 shadow border-0" data-anime="left">
 
                             <form class="row g-3">
                                 <div class="col-md-6">
