--- a/Novo projeto/templates/index.html
+++ b/Novo projeto/templates/index.html
@@ -368,23 +368,28 @@
                     <div class="col-md-7 mt-5 mt-md-0">
                         <div class="card p-5 h-100 shadow border-0" data-anime="left">
 
-                            <form class="row g-3">
+                            <form class="row g-3" action='/send' method="POST">
                                 <div class="col-md-6">
                                   <label for="nome" class="form-label">Nome</label>
-                                  <input type="text" class="form-control" id="nome" name='nome'>
+                                  <input type="text" class="form-control" id="nome" name='nome' required>
                                 </div>
                                 <div class="col-md-6">
                                   <label for="email" class="form-label">Email</label>
-                                  <input type="email" class="form-control" id="email" name='email'>
+                                  <input type="email" class="form-control" id="email" name='email' required>
                                 </div>
                                 <div class="col-12">
                                   <label for="mensagem" class="form-label">Mensagem:</label>
                                   <textarea type="text" class="form-control" id="mensagem" name='mensagem' 
-                                  rows="10" placeholder="Digite sua mensagem"></textarea>
+                                  rows="10" placeholder="Digite sua mensagem" required></textarea>
                                 </div>
                                
                                 <div class="col-12 d-flex justify-content-center mt-4">
                                   <button type="submit" class="btn btn-outline-primary">Enviar mensagem</button>
+                                  
+                                  <button id='btn-enviar-loader' class="btn btn-primary" type="button" disabled>
+                                    <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                                    <span role="status">Loading...</span>
+                                  </button>
                                 </div>
                             </form>
 
@@ -394,6 +399,18 @@
             </div>
 
         </section>
+
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        {% for message in messages %}
+        <div id="alerta" class="alert alert-success alert-dismissible fade show" role="alert">
+            <i class="bi bi-check-circle-fill"></i> Mensagem enviada com suceso!
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+
     </main>
     
 
