--- a/Novo projeto/static/style.css
+++ b/Novo projeto/static/style.css
@@ -11,7 +11,7 @@ html, body{
     top: 0%;
     left: 0%;
     bottom: 0%;
-    background: #021124;
+    background: #E0218A;
     overflow-y: auto;
     width: 300px;
     transition: all ease-in-out 0.5s;
@@ -23,7 +23,7 @@ html, body{
     margin: 15px auto;
     display: block;
     width: 120px;
-    border: 8px solid #2c2f3f;
+    border: 8px solid #A020F0;
     border-radius: 50%;
 }
 
@@ -36,9 +36,14 @@ html, body{
     color: #fff;
 }
 
+#header .profile .social-links {
+    margin-top: 20px;
+    text-align: center;
+}
+
 #header .profile .social-links a {
     font-size: 1rem;
-    background: #212431;
+    background: #A020F0;
     color: #fff;
     padding: 0.6rem;
     margin-right: 1rem;
@@ -48,7 +53,7 @@ html, body{
 }
 
 #header .profile .social-links a:hover {
-    background: #149ddd;
+    background: #A020F0;
 }
 
 .nav-menu {
@@ -83,7 +88,7 @@ html, body{
 .nav-menu .active i, 
 .nav-menu.active:focus i, 
 .nav-menu li:hover > a i {
-    color: #149ddd;
+    color: #A020F0;
 }
 
 main {
@@ -125,7 +130,7 @@ section#inicio div#arraste {
 i.menu-mobile {
     position: fixed;
     color: #fff;
-    background-color: #252c90;
+    background-color: #A020F0;
     right: 1rem;
     top: 1rem;
     font-size: 1.5rem;
@@ -176,7 +181,7 @@ i.menu-mobile {
 }
 
 *::-webkit-scrollbar-thumb {
-    background-color: #252c90;
+    background-color: #A020F0;
     border-radius: 5%;
 }
 
@@ -290,4 +295,25 @@ i.menu-mobile {
     z-index: 10;
     top: 30px;
     right: 30px;
+}
+
+#footer {
+    padding: 15px;
+    color: #fff;
+    font-size: 14px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 300px;
+    z-index: 9999;
+    background-color: #E0218A;
+    transition: .3s;
+}
+
+@media (max-width: 1012px) {
+    #footer{
+        position: static;
+        width: auto;
+        padding: 20px 15px;
+    }
 }
