--- a/Novo projeto/templates/index.html
+++ b/Novo projeto/templates/index.html
@@ -421,73 +421,68 @@
           
 
         <section id="contato" class="pt-5 pb-5">
+          <div class="container mb-5">
+              <h2 class="pt-3 pb-3">Contato</h2>
+      
+              <div class="row">
 
-            <div class="container mb-5">
-                <h2 class="pt-3 pb-3">Contato</h2>
-
-                <div class="row">
-                    <div class="col-md-5">
-                        <div class="card p-5 shadow border-0" data-anime="up">
-                            <div class="endereco">
-                                <h4><i class="bi bi-geo-alt"></i>Localização:</h4>
-                                <p>Curitiba, Paraná</p>
-                            </div>
-
-                            <div class="email">
-                                <h4><i class="bi bi-envelope"></i>Email:</h4>
-                                <p>barbiedoti2@gmail.com</p>
-                            </div>
-
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.9724115881245!2d-49.32152992393004!3d-25.60583297745013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dcfef37a9b8d69%3A0x6d8b345a22ce9776!2sPosto%20Pelanda%2016!5e0!3m2!1spt-BR!2sbr!4v1743679396048!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class='w-100'></iframe>
-                        </div>
-                    </div>
-
-                    <div class="col-md-7 mt-5 mt-md-0">
-                        <div class="card p-5 h-100 shadow border-0" data-anime="left">
-
-                            <form class="row g-3" action='/send' method="POST">
-                                <div class="col-md-6">
+                  <div class="col-md-5">
+                      <div class="card p-5 shadow border-0" data-anime="up">
+                          <div class="endereco">
+                              <h4><i class="bi bi-geo-alt"></i> Localização:</h4>
+                              <p>Curitiba, Paraná</p>
+                          </div>
+      
+                          <div class="email">
+                              <h4><i class="bi bi-envelope"></i> Email:</h4>
+                              <p>barbiedoti2@gmail.com</p>
+                          </div>
+      
+                          <iframe 
+                              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3597.9724115881245!2d-49.32152992393004!3d-25.60583297745013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dcfef37a9b8d69%3A0x6d8b345a22ce9776!2sPosto%20Pelanda%2016!5e0!3m2!1spt-BR!2sbr!4v1743679396048!5m2!1spt-BR!2sbr" 
+                              width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" 
+                              referrerpolicy="no-referrer-when-downgrade" class="w-100">
+                          </iframe>
+                      </div>
+                  </div>
+      
+                  <div class="col-md-7 mt-5 mt-md-0">
+                      <div class="card p-5 h-100 shadow border-0" data-anime="left">
+      
+                                      <div id="alerta" class="alert alert-success alert-dismissible fade show" role="alert">
+                                          <i class="bi bi-check-circle-fill"></i> Mensagem enviada com sucesso!
+                                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                      </div>
+      
+                          <form class="row g-3" action="/send" method="POST">
+                              <div class="col-md-6">
                                   <label for="nome" class="form-label">Nome</label>
-                                  <input type="text" class="form-control" id="nome" name='nome' required>
-                                </div>
-                                <div class="col-md-6">
+                                  <input type="text" class="form-control" id="nome" name="nome" required>
+                              </div>
+                              <div class="col-md-6">
                                   <label for="email" class="form-label">Email</label>
-                                  <input type="email" class="form-control" id="email" name='email' required>
-                                </div>
-                                <div class="col-12">
+                                  <input type="email" class="form-control" id="email" name="email" required>
+                              </div>
+                              <div class="col-12">
                                   <label for="mensagem" class="form-label">Mensagem:</label>
-                                  <textarea type="text" class="form-control" id="mensagem" name='mensagem' 
-                                  rows="10" placeholder="Digite sua mensagem" required></textarea>
-                                </div>
-                               
-                                <div class="col-12 d-flex justify-content-center mt-4">
+                                  <textarea class="form-control" id="mensagem" name="mensagem" rows="10" placeholder="Digite sua mensagem" required></textarea>
+                              </div>
+      
+                              <div class="col-12 d-flex justify-content-center mt-4">
                                   <button type="submit" class="btn btn-outline-primary">Enviar mensagem</button>
-                                  
-                                  <button id='btn-enviar-loader' class="btn btn-primary" type="button" disabled>
-                                    <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
-                                    <span role="status">Loading...</span>
+      
+                                  <button id="btn-enviar-loader" class="btn btn-primary ms-2" type="button" disabled>
+                                      <span class="spinner-border spinner-border-sm" aria-hidden="true"></span>
+                                      <span role="status">Loading...</span>
                                   </button>
-                                </div>
-                            </form>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </section>
-
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-            <div id="alerta" class="alert alert-success alert-dismissible fade show" role="alert">
-                <i class="bi bi-check-circle-fill"></i> Mensagem enviada com sucesso!
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-            {% endfor %}
-        {% endif %}
-        {% endwith %}
-    
+                              </div>
+                          </form>
+      
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>      
     </main>
     
     <footer id="footer">
